add metadata to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ name = "math3d"
 version = "0.0.1"
 authors = ["Andrew Kelley <superjoe30@gmail.com>"]
 license = "MIT"
+description = "A simple rust library for computer-graphics matrix calculations."
+repository = "git://github.com/andrewrk/math3d-rs.git"
